/*
Copyright 2024 The olive Authors

This program is offered under a commercial and under the AGPL license.
For AGPL licensing, see below.

AGPL licensing:
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.olive_io.olive.apis.core.v1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/olive-io/olive/apis/core/v1";

message BpmnArgs {
  map<string, string> headers = 1;

  map<string, bytes> properties = 2;

  map<string, bytes> dataObjects = 3;
}

message BpmnStatistics {
  optional int64 definitions = 1;

  optional int64 processes = 2;

  optional int64 events = 3;

  optional int64 tasks = 4;
}

// Definition is bpmn definitions
message Definition {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional DefinitionSpec spec = 2;

  optional DefinitionStatus status = 3;
}

// DefinitionList is a list of Definition objects.
message DefinitionList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of Definition
  repeated Definition items = 2;
}

message DefinitionSpec {
  optional string content = 1;

  optional int64 version = 2;
}

message DefinitionStatus {
  optional string phase = 1;
}

message FlowNode {
  optional string type = 1;

  optional string id = 2;
}

message FlowNodeStat {
  optional string id = 1;

  optional string name = 2;

  optional ProcessContext context = 3;

  optional int32 retries = 4;

  optional string message = 5;

  optional int64 startTime = 6;

  optional int64 endTime = 7;
}

// Namespace provides a scope for Names.
// Use of multiple namespaces is optional
message Namespace {
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec defines the behavior of the Namespace.
  // +optional
  optional NamespaceSpec spec = 2;

  // Status describes the current status of a Namespace
  // +optional
  optional NamespaceStatus status = 3;
}

// NamespaceCondition contains details about state of namespace.
message NamespaceCondition {
  // Type of namespace controller condition.
  optional string type = 1;

  // Status of the condition, one of True, False, Unknown.
  optional string status = 2;

  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.Time lastTransitionTime = 3;

  // +optional
  optional string reason = 4;

  // +optional
  optional string message = 5;
}

// NamespaceList is a list of Namespaces.
message NamespaceList {
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Namespace items = 2;
}

// NamespaceSpec describes the attributes on a Namespace
message NamespaceSpec {
  // Finalizers is an opaque list of values that must be empty to permanently remove object from storage
  repeated string finalizers = 1;
}

// NamespaceStatus is information about the current status of a Namespace.
message NamespaceStatus {
  // Phase is the current lifecycle phase of the namespace.
  // +optional
  optional string phase = 1;

  // +optional
  repeated NamespaceCondition conditions = 2;
}

message Process {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ProcessSpec spec = 2;

  optional ProcessStatus status = 3;
}

message ProcessContext {
  map<string, bytes> variables = 1;

  map<string, bytes> dataObjects = 2;
}

message ProcessList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Process items = 2;
}

message ProcessSpec {
  optional BpmnArgs args = 1;

  optional string definitionsName = 2;

  optional int64 definitionsVersion = 3;

  optional string definitionsProcess = 4;

  optional string definitionsContent = 5;
}

message ProcessStatus {
  optional string phase = 1;

  optional string message = 2;

  optional ProcessContext context = 3;

  repeated FlowNode flowNodes = 4;

  map<string, FlowNodeStat> flowNodeStatMap = 5;

  optional int32 attempts = 6;

  optional int64 creationTimestamp = 7;

  optional int64 endTimestamp = 8;
}

// Runner the olive node
message Runner {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional RunnerSpec spec = 2;

  optional RunnerStatus status = 3;
}

// RunnerList is a list of Runner objects.
message RunnerList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of Runner
  repeated Runner items = 2;
}

// RunnerSpec is the specification of a Runner.
message RunnerSpec {
  // ID is the member ID for this member.
  optional int64 id = 1;

  // hostname is the host name get by os.Hostname().
  optional string hostname = 2;

  optional int64 heartbeatMs = 3;

  // peerURL is the URL the member exposes to the cluster for communication.
  optional string listenURL = 4;

  optional string version = 5;

  map<string, string> features = 6;
}

// RunnerStatistics is the stat information of Runner
message RunnerStatistics {
  optional string name = 1;

  optional double cpuUsed = 2;

  optional double memoryUsed = 3;

  optional BpmnStatistics bpmnStat = 4;

  optional int64 timestamp = 5;
}

message RunnerStatus {
  optional string phase = 1;

  optional string message = 2;

  optional double cpuTotal = 3;

  optional double memoryTotal = 4;

  optional int64 diskSize = 5;

  optional RunnerStatistics stat = 6;
}

